- Added Float Range in Types.
- `secho`'s first argument can now be `None`, like in `echo`.
- Usage errors now hint at the `--help` option.
- ``launch`` now works properly under Cygwin. See #650.
- `CliRunner.invoke` now may receive `args` as a string representing
  a Unix shell command. See #664.
- Fix bug that caused bashcompletion to give inproper completions on 
  chained commands. See #774.

Version 6.8
-----------

(bugfix release; yet to be released)

- Disabled sys._getframes() on Python interpreters that don't support it. See
  #728.
- Fix bug in test runner when calling ``sys.exit`` with ``None``. See #739.
- Fix crash on Windows console, see #744.
- Fix bashcompletion on chained commands. See #754.
- Fix option naming routine to match documentation.  See #793

Version 6.7
-----------

(bugfix release; released on January 6th 2017)

- Make `click.progressbar` work with `codecs.open` files. See #637.
- Fix bug in bash completion with nested subcommands. See #639.
- Fix test runner not saving caller env correctly. See #644.
- Fix handling of SIGPIPE. See #626
- Deal with broken Windows environments such as Google App Engine's. See #711.

Version 6.6
-----------

(bugfix release; released on April 4th 2016)

- Fix bug in `click.Path` where it would crash when passed a `-`. See #551.

Version 6.4
-----------

(bugfix release; released on March 24th 2016)

- Fix bug in bash completion where click would discard one or more trailing
  arguments. See #471.

Version 6.3
-----------

(bugfix release; released on February 22 2016)

- Fix argument checks for interpreter invoke with `-m` and `-c`
  on Windows.
- Fixed a bug that cased locale detection to error out on Python 3.

Version 6.2
-----------

(bugfix release, released on November 27th 2015)

- Correct fix for hidden progress bars.

Version 6.1
-----------

(bugfix release, released on November 27th 2015)

- Resolved an issue with invisible progress bars no longer rendering.