@@ -25,6 +25,9 @@ Version 7.0
   a Unix shell command. See #664.
 - Fix bug that caused bashcompletion to give inproper completions on 
   chained commands. See #774.
+- Fix bug that caused bashcompletion to give inproper completions on
+  chained commands when a required option/argument was being completed.
+  See #790.
 
 Version 6.8
 -----------
